@@ -1,7 +1,0 @@
-package org.fleen.samples.fleenRasterCompositionGen.symmetryControlFunction;
-
-public class SCF_Default extends SymmetryControlFunction_Abstract{
-
-  private static final long serialVersionUID=-6286630643497050920L;
-
-}
