@@ -1,0 +1,12 @@
+package org.fleen.samples.fleenRasterCompositionGen.symmetryController;
+
+import org.fleen.core.diamondGrammar.Bubble;
+
+public class SC_PureRandom extends SymmetryControlFunction_Abstract{
+
+  private static final long serialVersionUID=-4647341675246217764L;
+
+  public boolean doSymmetry(Bubble bubble){
+    return false;}
+
+}
