@@ -1,0 +1,12 @@
+package org.fleen.samples.fleenRasterCompositionGen.symmetryController;
+
+import org.fleen.core.diamondGrammar.Bubble;
+
+public class SC_PureSymmetry extends SymmetryControlFunction_Abstract{
+
+  private static final long serialVersionUID=-5227873591134750761L;
+
+  public boolean doSymmetry(Bubble bubble){
+    return true;}
+
+}
